--- a/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Pages/AddApplicationDailog.razor
+++ b/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Pages/AddApplicationDailog.razor
@@ -46,10 +46,10 @@
             }
         </MudSelect>
 
-        <MudTextField @bind-Value="Item.Profile.PassportNo"
-                      For="@(() => Item.Profile.PassportNo)"
+        <MudTextField @bind-Value="Item.Profile.IDOrPassportNo"
+                      For="@(() => Item.Profile.IDOrPassportNo)"
                       Immediate="true"
-                      Label="Passport No" />
+                      Label="ID / Passport No" />
 
         @* <MudPaper Class="d-flex flex-wrap gap-4" MaxWidth="auto" Elevation="0">
             <MudSelect @bind-Value="Country" Label="Country" Variant="Variant.Text">
